<resources>
    <string name="app_name">HW17</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat_password">Repeat password</string>
    <string name="remember_me">Remember me</string>
    <string name="home">HOME</string>
    <string name="log_out">Log Out</string>
</resources>